<resources>
    <string name="app_name">RestoScrapper</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_list_item">listItem</string>
    <string name="review"><b>Customer Reviews: </b></string>
    <string name="yelp">Yelp:  </string>
    <string name="tripA">TripAdvisor:  </string>
    <string name="fourS">FourSquare:  </string>
    <string name="aggR"><b>Aggregate Rating:  </b></string>
</resources>
